Reducción de smells

--- a/bin/src/main/resources/templates/fragments/nav.html
+++ b/bin/src/main/resources/templates/fragments/nav.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <body>
+<head>
+<title>Reservations</title>	
+</head>
 <nav th:fragment="nav" class="navbar navbar-expand navbar-dark bg-primary">
     <div class="navbar-nav w-100">
         <a class="navbar-brand text-color" href="/">Amenities Reservation System</a>
